updated homepage copies

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
 								<div class="price-body">
 									<h2><span>N</span> 34,000 <span class="month">/mo</span></h2>
 									<p>
-										Dynamo Cloud Ltding offers hosting plans that are secure,
-										reliable, and performing for just $580.58/year.
+										Dynamo Cloud Ltd offers hosting plans that are secure,
+										reliable, and performing.
 									</p>
 								</div>
 								<!-- <div class="price-link">
@@ -367,8 +367,9 @@
 								<div class="price-body">
 									<h2><span>N</span> 46,000 <span class="month">/mo</span></h2>
 									<p>
-										Dynamo Cloud Ltding offers hosting plans that are secure,
-										reliable, and performing for just $580.58/year.
+										Dynamo Cloud Ltd provides VPS Hosting solutions that are
+										secure, reliable, and high-performing, tailored to meet your
+										specific needs.
 									</p>
 								</div>
 								<!-- <div class="price-link">
@@ -390,8 +391,9 @@
 								<div class="price-body">
 									<h2><span>N</span> 17,000 <span class="month">/mo</span></h2>
 									<p>
-										Dynamo Cloud Ltd offers hosting plans that are secure,
-										reliable, and performing for just $580.58/year.
+										Dynamo Cloud Ltd’s Shared Hosting plans offer security,
+										reliability, and performance, making it an ideal choice for
+										beginners and small businesses.
 									</p>
 								</div>
 								<!-- <div class="price-link">
@@ -564,8 +566,11 @@
 									<span>01</span>
 									<h3>Data Migration</h3>
 									<p>
-										Dynamo Cloud Ltding flexible Managed Backup Solutions will
-										help simplify the protection of your data.
+										At Dynamo Cloud, we understand that moving your data can be
+										a daunting task. That’s why we offer seamless data migration
+										services. Our team of experts ensures a smooth transition
+										with minimal downtime, so you can get back to business as
+										soon as possible.
 									</p>
 								</div>
 							</div>
@@ -577,8 +582,11 @@
 									<span>02</span>
 									<h3>DDoS Protection</h3>
 									<p>
-										Dynamo Cloud Ltding flexible Managed Backup Solutions will
-										help simplify the protection of your data.
+										In the digital age, DDoS attacks are a growing threat.
+										Dynamo Cloud Ltd provides robust DDoS protection to
+										safeguard your website. Our advanced security measures help
+										to detect and mitigate attacks, ensuring your website
+										remains accessible and secure at all times.
 									</p>
 								</div>
 							</div>
@@ -590,8 +598,11 @@
 									<span>03</span>
 									<h3>Data Security</h3>
 									<p>
-										Dynamo Cloud Ltding flexible Managed Backup Solutions will
-										help simplify the protection of your data.
+										Your data is your most valuable asset, and its security is
+										our top priority. Dynamo Cloud Ltd employs state-of-the-art
+										data security measures to protect your sensitive
+										information. With us, you can rest assured that your data is
+										in safe hands
 									</p>
 								</div>
 							</div>
