updated about page copy

--- a/about.html
+++ b/about.html
@@ -209,11 +209,32 @@
 								<h2>Why Choose Us</h2>
 
 								<p>
-									Our team is composed of passionate, tech-savvy individuals
-									committed to providing the best customer service and the most
-									reliable hosting solutions. We understand that every website
-									has unique needs, and we strive to provide tailored solutions
-									that align with your goals.
+									Experience the difference with our top-notch web hosting
+									service. Here’s why we stand out:
+								</p>
+								<ul>
+									<li>
+										Reliable and Secure: We prioritize your website’s security
+										and uptime. Our robust infrastructure ensures your site is
+										always up and running.
+									</li>
+									<li>
+										Scalable Solutions: Whether you’re a small business or a
+										large enterprise, we have plans that grow with you.
+									</li>
+
+									<li>
+										24/7 Support: Our dedicated support team is available around
+										the clock to assist with any queries or issues.
+									</li>
+									<li>
+										Value for Money: We offer competitive pricing without
+										compromising on quality and features.
+									</li>
+								</ul>
+								<p>
+									Choose us for a seamless, secure, and superior hosting
+									experience
 								</p>
 							</div>
 						</div>
@@ -480,10 +501,6 @@
                 </div> -->
 			</div>
 
-			<!-- Our-team-area end -->
-
-			<!-- Our-faq-area start -->
-
 			<div class="our-faq-area pt-110 pb-90">
 				<!-- <div class="container">
 					<div class="row">
@@ -681,11 +698,7 @@
 					</div>
 				</div> -->
 			</div>
-
-			<!-- Our-faq-area end -->
 		</main>
-
-		<!-- footer start -->
 
 		<!-- footer start -->
 		<footer>
