--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 						</div>
 						<div class="col-xl-6 col-lg-4">
 							<div class="section-link text-left text-lg-right mb-30">
-								<a href="" class="btn btn-soft-border">Purchase here</a>
+								<!-- <a href="" class="btn btn-soft-border">Purchase here</a> -->
 							</div>
 						</div>
 					</div>
