--- a/share-hosting.html
+++ b/share-hosting.html
@@ -202,8 +202,7 @@
 										role="tab"
 										aria-controls="profile"
 										aria-selected="false"
-										>Yearly pricing for save -35%
-										<i class="fal fa-angle-left"></i
+										>Yearly pricing, save 20% <i class="fal fa-angle-left"></i
 									></a>
 								</li>
 							</ul>
