updated about shared hosting page

--- a/share-hosting.html
+++ b/share-hosting.html
@@ -170,8 +170,9 @@
 								<h2>Price & Plans</h2>
 
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+									Explore plans, each designed with optimal performance and
+									affordability in mind. Choose the one that fits your needs
+									best and let’s start your online journey together!
 								</p>
 							</div>
 						</div>
