--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 									<h3>Cloud Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>N</span> 34,000 <span class="month">/mo</span></h2>
+									<h2><span>$</span> 11 <span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltd offers hosting plans that are secure,
 										reliable, and performing.
@@ -365,7 +365,7 @@
 									<h3>VPS Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>N</span> 46,000 <span class="month">/mo</span></h2>
+									<h2><span>$</span> 3.99 <span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltd provides VPS Hosting solutions that are
 										secure, reliable, and high-performing, tailored to meet your
@@ -389,7 +389,7 @@
 									<h3>Shared Hosting</h3>
 								</div>
 								<div class="price-body">
-									<h2><span>N</span> 17,000 <span class="month">/mo</span></h2>
+									<h2><span>$</span> 1.99<span class="month">/mo</span></h2>
 									<p>
 										Dynamo Cloud Ltd’s Shared Hosting plans offer security,
 										reliability, and performance, making it an ideal choice for
