--- a/share-hosting.html
+++ b/share-hosting.html
@@ -237,9 +237,11 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price"><sub>N</sub>1,500<sub>.00</sub></h4>
+													<h4 class="price"><sub>$</sub>2.15<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Create Account</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
@@ -272,9 +274,11 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price"><sub>N</sub>3,300<sub>.00</sub></h4>
+													<h4 class="price"><sub>$</sub>4.27<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Purchase Now</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
@@ -307,9 +311,11 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>N</sub>1,900<sub>.00</sub></h4>
+													<h4 class="price"><sub>$</sub>2.72<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Create Account</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
@@ -367,11 +373,11 @@
 												<div class="price-details">
 													<span>Basic</span>
 
-													<h4 class="price">
-														<sub>N</sub>15,000<sub>.00</sub>
-													</h4>
+													<h4 class="price"><sub>$</sub>21.45<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Create Account</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
@@ -406,11 +412,11 @@
 												<div class="price-details">
 													<span>Core</span>
 
-													<h4 class="price">
-														<sub>N</sub>33,000<sub>.00</sub>
-													</h4>
+													<h4 class="price"><sub>$</sub>47.17<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Purchase Now</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
@@ -445,9 +451,11 @@
 												<div class="price-details">
 													<span>Advanced</span>
 
-													<h4 class="price"><sub>N</sub>19,00<sub>.00</sub></h4>
+													<h4 class="price"><sub>$</sub>27.17<sub>.00</sub></h4>
 
-													<a class="btn price-btn" href="#">Create Account</a>
+													<a class="btn price-btn" href="./get-started.html"
+														>Get started</a
+													>
 												</div>
 
 												<ul class="price-content">
