slight changes, images

--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
 
 			<section
 				class="breadcrumb-area"
-				style="background-image: url(img/bg/contractbg.jpg)"
+				style="background-image: url(img/bg/chip.jpg)"
 			>
 				<div class="container">
 					<div class="row">
@@ -322,184 +322,6 @@
 			<!-- core-features end -->
 
 			<!-- Our-team-area start -->
-
-			<div class="our-team-area pt-110 pb-90">
-				<!-- <div class="container">
-
-                    <div class="row ">
-
-                        <div class="col-xl-6 col-lg-8 offset-lg-2 offset-xl-3">
-
-                            <div class="section-title text-center mb-70">
-
-                                <h2>Our Team</h2>
-
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-
-                                    tempor incididunt ut labore et dolore magna aliqua.</p>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                    <div class="row">
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-
-                            <div class="our-team-wrapper mb-30 wow fadeInUp" data-wow-delay=".3s">
-
-                                <div class="team-img position-relative">
-
-                                    <img src="img/team/team01.jpg" alt="">
-
-                                    <div class="team-shape shape1">
-
-                                        <img src="img/shape/team-shape.png" alt="">
-
-                                    </div>
-
-                                </div>
-
-                                <div class="team-text">
-
-                                    <h2>Rosalina D.William</h2>
-
-                                    <span>founder</span>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-
-                                        labore et dolore.</p>
-
-                                    <div class="team-link">
-
-                                        <ul>
-
-                                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-behance"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-
-                                        </ul>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-
-                            <div class="our-team-wrapper mb-30 wow fadeInUp" data-wow-delay=".5s">
-
-                                <div class="team-img position-relative">
-
-                                    <img src="img/team/team02.jpg" alt="">
-
-                                    <div class="team-shape shape2">
-
-                                        <img src="img/shape/team-shape.png" alt="">
-
-                                    </div>
-
-                                </div>
-
-                                <div class="team-text">
-
-                                    <h2>Rosalina D. William</h2>
-
-                                    <span>ceo</span>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-
-                                        labore et dolore.</p>
-
-                                    <div class="team-link">
-
-                                        <ul>
-
-                                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-behance"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-
-                                        </ul>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <div class="col-xl-4 col-lg-4 col-md-6">
-
-                            <div class="our-team-wrapper mb-30 wow fadeInUp" data-wow-delay=".7s">
-
-                                <div class="team-img position-relative">
-
-                                    <img src="img/team/team03.jpg" alt="">
-
-                                    <div class="team-shape shape3">
-
-                                        <img src="img/shape/team-shape.png" alt="">
-
-                                    </div>
-
-                                </div>
-
-                                <div class="team-text">
-
-                                    <h2>Rosalina D. William</h2>
-
-                                    <span>marketer</span>
-
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-
-                                        labore et dolore.</p>
-
-                                    <div class="team-link">
-
-                                        <ul>
-
-                                            <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-twitter"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-behance"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-youtube"></i></a></li>
-
-                                            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-
-                                        </ul>
-
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div> -->
-			</div>
 
 			<div class="our-faq-area pt-110 pb-90">
 				<!-- <div class="container">
@@ -702,10 +524,7 @@
 
 		<!-- footer start -->
 		<footer>
-			<section
-				class="footer-area pb-90 bg-footer"
-				data-background="img/bg/footer-bg.jpg"
-			>
+			<section class="footer-area pb-90 bg-footer" data-background="img/bg/">
 				<div class="container">
 					<div
 						class="row d-flex justify-content-start justify-content-md-between align-items-center"
