--- a/get-started.html
+++ b/get-started.html
@@ -135,7 +135,7 @@
 
 			<section
 				class="breadcrumb-area"
-				style="background-image: url(img/bg/contractbg.jpg)"
+				style="background-image: url(img/bg/4991.jpg)"
 			>
 				<div class="container">
 					<div class="row">
@@ -345,8 +345,6 @@
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 
 		<script src="js/jquery.magnific-popup.min.js"></script>
-
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvEEMx3XDpByNzYNn0n62Zsq_sVYPx1zY"></script>
 
 		<script src="js/plugins.js"></script>
 
