--- a/share-hosting.html
+++ b/share-hosting.html
@@ -135,7 +135,7 @@
 
 			<section
 				class="breadcrumb-area"
-				style="background-image: url(img/bg/contractbg.jpg)"
+				style="background-image: url(img/bg/812.jpg)"
 			>
 				<div class="container">
 					<div class="row">
