--- a/privacy.html
+++ b/privacy.html
@@ -52,8 +52,7 @@
 						>
 							<div class="logo">
 								<a href="index.html">
-									<!-- <img src="img/logo/logo.png" alt="" /> -->
-									Dynamo Cloud
+									<img src="img/logo/logo.png" alt="" style="width: 8rem" />
 								</a>
 							</div>
 						</div>
@@ -100,42 +99,35 @@
 			</div>
 			<div class="logo-side mb-30">
 				<a href="index.html">
-					<!-- <img src="img/logo/logo.png" alt="" /> -->
-					Hosting
+					<img src="img/logo/logo.png" alt="" style="width: 8rem" />
 				</a>
 			</div>
 			<div class="side-info mb-30">
 				<div class="contact-list mb-30">
 					<h4>Office Address</h4>
-					<p>lagos</p>
+					<p>5/7 Lekki Beach Road, by 3rd Roundabout, Lekki, Lagos, Nigeria</p>
 				</div>
 				<div class="contact-list mb-30"></div>
 				<div class="contact-list mb-30">
 					<h4>Email Address</h4>
 					<p>
-						<a
-							href="../../cdn-cgi/l/email-protection.html"
-							class="__cf_email__"
-							data-cfemail="422b2c242d02273a232f322e276c212d2f"
-							>email</a
+						<a href="mailto:hello@mydynamocloud.com" class="__cf_email__"
+							>hello@mydynamocloud.com</a
 						>
 					</p>
 				</div>
 			</div>
 
 			<div class="social-icon-right mt-20">
-				<a href="#">
-					<i class="fab fa-facebook-f"></i>
-				</a>
+				<a href="#"> </a>
 			</div>
 		</div>
-
 		<main>
 			<!-- breadcrumb-area-start -->
 
 			<section
 				class="breadcrumb-area"
-				style="background-image: url(img/bg/contractbg.jpg)"
+				style="background-image: url(img/bg/517.jpg)"
 			>
 				<div class="container">
 					<div class="row">
@@ -166,24 +158,15 @@
 								<h3>01. What is the Privacy?</h3>
 
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-									irure dolor in reprehenderit in voluptate velit esse cillum
-									dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt
-									mollit anim id est laborum. Sed ut perspiciatis unde omnis
-									iste natus error sit voluptatem accusantium doloremque
-									laudantium, totam rem aperiam, eaque ipsa quae ab illo
-									inventore veritatis et quasi architecto beatae vitae dicta
-									sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-									aspernatur aut odit aut fugit, sed quia consequuntur magni
-									dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-									quisquam est, qui dolorem ipsum quia dolor sit amet,
-									consectetur, adipisci velit, sed quia non numquam eius modi
-									tempora incidunt ut labore et dolore magnam aliquam quaerat
-									voluptatem.
+									Dynomo Cloud Ltd is committed to protecting your privacy. This
+									Privacy Policy explains how we collect, use, and safeguard
+									your personal information. We strive to ensure that your
+									personal data is handled securely and transparently. Please
+									read this Privacy Policy carefully to understand how we
+									process your data and what rights you have regarding your
+									personal information. By using our services, you agree to the
+									practices described in this Privacy Policy. If you do not
+									agree to this Privacy Policy, please do not use our services.
 								</p>
 							</div>
 						</div>
@@ -191,35 +174,19 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<div class="privacy-heading mb-55">
-								<h3>02. What is the Policy?</h3>
-
-								<p class="privacy-color">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									laboris nisi ut aliquip ex ea commodo consequat.
-								</p>
+							<div class="privacy-heading mt-110 mb-55">
+								<h3>02. Data Collection</h3>
 
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-									irure dolor in reprehenderit in voluptate velit esse cillum
-									dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt
-									mollit anim id est laborum. Sed ut perspiciatis unde omnis
-									iste natus error sit voluptatem accusantium doloremque
-									laudantium, totam rem aperiam, eaque ipsa quae ab illo
-									inventore veritatis et quasi architecto beatae vitae dicta
-									sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-									aspernatur aut odit aut fugit, sed quia consequuntur magni
-									dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-									quisquam est, qui dolorem ipsum quia dolor sit amet,
-									consectetur, adipisci velit, sed quia non numquam eius modi
-									tempora incidunt ut labore et dolore magnam aliquam quaerat
-									voluptatem.
+									At Dynomo Cloud Ltd, we collect personal information for the
+									purpose of providing our cloud hosting services. This
+									information may include but is not limited to your name, email
+									address, payment details, and contact information. We collect
+									this data when you register for our services, make a purchase,
+									or contact our support team. We also collect non-personal
+									information, such as browser information, device type, and IP
+									addresses, to improve our services and ensure a secure and
+									reliable hosting environment.
 								</p>
 							</div>
 						</div>
@@ -227,31 +194,73 @@
 
 					<div class="row">
 						<div class="col-xl-12">
-							<div class="privacy-heading mb-55">
-								<h3>03. How can i collect address?</h3>
+							<div class="privacy-heading mt-110 mb-55">
+								<h3>03. Data Use</h3>
 
-								<p class="privacy-color">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-									do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco
-									laboris nisi ut aliquip ex ea commodo consequat.
+								<p>
+									We use the data we collect for various purposes, including:
 								</p>
+								<ul>
+									<li>
+										Providing, maintaining, and improving our cloud hosting
+										services.
+									</li>
+									<li>Processing payments and invoices.</li>
+									<li>
+										Notifying you of service updates, promotions, and important
+										account-related information.
+									</li>
+									<li>
+										Responding to your inquiries and providing customer support.
+									</li>
+									<li>
+										Conducting security and performance monitoring of our
+										services.
+									</li>
+								</ul>
+								<p>
+									We will never share your personal information with third
+									parties unless required by law or with your explicit consent.
+								</p>
+							</div>
+						</div>
+					</div>
 
-								<div class="privacy-left">
-									<p>
-										Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-										sed do eiusmod tempor incididunt ut labore et dolore magna
-										aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-										ullamco laboris nisi ut aliquip ex ea commodo consequat.
-										Duis aute irure dolor in reprehenderit in voluptate velit
-										esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-										occaecat cupidatat non proident, sunt in culpa qui officia
-										deserunt mollit anim id est laborum. Sed ut perspiciatis
-										unde omnis iste natus error sit voluptatem accusantium
-										doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
-										illo inventore veritatis et quasi architecto.
-									</p>
-								</div>
+					<div class="row">
+						<div class="col-xl-12">
+							<div class="privacy-heading mt-110 mb-55">
+								<h3>04. Data Security</h3>
+
+								<p>
+									Dynomo Cloud Ltd takes data security seriously. We employ
+									industry-standard security measures to protect your personal
+									information from unauthorized access, disclosure, alteration,
+									and destruction. We regularly assess and enhance our security
+									protocols to safeguard your data. However, please note that no
+									method of transmission over the internet or electronic storage
+									is entirely secure, and we cannot guarantee absolute security.
+									You play a crucial role in protecting your information by
+									using strong passwords and keeping your login credentials
+									confidential.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-xl-12">
+							<div class="privacy-heading mt-110 mb-55">
+								<h3>05. Your Rights</h3>
+
+								<p>
+									You have rights regarding your personal information, including
+									the right to access, correct, or delete your data. If you wish
+									to exercise these rights or have any concerns about your data,
+									please contact our Data Protection Officer at
+									Hello@Mydynamocloud.Com. We will respond to your requests
+									promptly and in accordance with applicable data protection
+									laws.
+								</p>
 							</div>
 						</div>
 					</div>
@@ -260,8 +269,6 @@
 
 			<!-- privacy area finish -->
 		</main>
-
-		<!-- footer start -->
 
 		<!-- footer start -->
 		<footer>
@@ -279,40 +286,41 @@
 							<div class="footer-bottom-area">
 								<div class="widgets">
 									<div class="footer-logo">
-										<!-- <img src="img/logo/logo.png" alt="" /> -->
-										Dynamo Cloud
+										<img
+											src="img/logo/logo.png"
+											alt="logo"
+											style="width: 8rem"
+										/>
 									</div>
 									<p>Top-tier web hosting solutions for your website</p>
 									<ul class="adress">
 										<li>
 											<i class="fa fa-map-marker-alt"></i>
-											<span> Lagos, NG</span>
+											<span>
+												5/7 Lekki Beach Road, by 3rd Roundabout, Lekki,
+												Lagos, Nigeria</span
+											>
 										</li>
 										<li>
 											<i class="fa fa-envelope"></i>
 											<span
 												><a
-													href="../../cdn-cgi/l/email-protection.html"
+													href="mailto:hello@mydynamocloud.com"
 													class="__cf_email__"
-													data-cfemail="d1b8bfb7be91b4a9b0bca1bdb4a6b4b3ffb2bebc"
-													>email</a
-												></span
-											>
+													>hello@mydynamocloud.com</a
+												>
+											</span>
 										</li>
-										<li><i class="fa fa-phone"></i> <span>234 00000</span></li>
-										<li>
-											<i class="fa fa-globe"> </i>
-											<!-- <span>www.webexample.com</span> -->
-										</li>
+										<!-- <li><i class="fa fa-phone"></i> <span>234 00000</span></li> -->
 									</ul>
 								</div>
 							</div>
 							<div class="footer-social text-center">
-								<a href="#"><i class="fab fa-facebook"></i></a>
+								<!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
 								<!-- <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-behance"></i></a>
-                                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                                    <a href="#"><i class="fab fa-youtube"></i></a> -->
+								<a href="#"><i class="fab fa-behance"></i></a>
+								<a href="#"><i class="fab fa-linkedin"></i></a>
+								<a href="#"><i class="fab fa-youtube"></i></a> -->
 							</div>
 						</div>
 						<div class="col-xl-8 col-lg-8">
@@ -338,12 +346,16 @@
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="#">Email</a></li>
+													<li>
+														<a href="mailto:hello@mydynamocloud.com"
+															>hello@mydynamocloud.com</a
+														>
+													</li>
 													<!-- <li><a href="#">hosting</a></li>
-                                                        <li><a href="#">WordPress</a></li>
-                                                        <li><a href="#">VPS</a></li>
-                                                        <li><a href="#">hosting</a></li>
-                                                        <li><a href="#">Dedicated</a></li> -->
+													<li><a href="#">WordPress</a></li>
+													<li><a href="#">VPS</a></li>
+													<li><a href="#">hosting</a></li>
+													<li><a href="#">Dedicated</a></li> -->
 												</ul>
 											</div>
 										</div>
@@ -357,10 +369,10 @@
 												<ul>
 													<li><a href="./about.html">About</a></li>
 													<!-- <li><a href="#">Tickets</a></li>
-                                                        <li><a href="#">Knowledge</a></li>
-                                                        <li><a href="#">base</a></li>
-                                                        <li><a href="#">System</a></li>
-                                                        <li><a href="#">Marketing</a></li> -->
+													<li><a href="#">Knowledge</a></li>
+													<li><a href="#">base</a></li>
+													<li><a href="#">System</a></li>
+													<li><a href="#">Marketing</a></li> -->
 												</ul>
 											</div>
 										</div>
@@ -380,8 +392,6 @@
 				</div>
 			</section>
 		</footer>
-		<!-- footer end -->
-
 		<!-- footer end -->
 
 		<!-- JS here -->
