--- a/about.html
+++ b/about.html
@@ -43,8 +43,6 @@
 
 	<body>
 		<!-- header start -->
-
-		<!-- header start -->
 		<header>
 			<div class="header-area header-transparent header-space pt-45 pb-45">
 				<div class="container-fluid">
@@ -54,8 +52,7 @@
 						>
 							<div class="logo">
 								<a href="index.html">
-									<!-- <img src="img/logo/logo.png" alt="" /> -->
-									Dynamo Cloud
+									<img src="img/logo/logo.png" alt="" style="width: 8rem" />
 								</a>
 							</div>
 						</div>
@@ -102,36 +99,29 @@
 			</div>
 			<div class="logo-side mb-30">
 				<a href="index.html">
-					<!-- <img src="img/logo/logo.png" alt="" /> -->
-					Hosting
+					<img src="img/logo/logo.png" alt="" style="width: 8rem" />
 				</a>
 			</div>
 			<div class="side-info mb-30">
 				<div class="contact-list mb-30">
 					<h4>Office Address</h4>
-					<p>lagos</p>
+					<p>5/7 Lekki Beach Road, by 3rd Roundabout, Lekki, Lagos, Nigeria</p>
 				</div>
 				<div class="contact-list mb-30"></div>
 				<div class="contact-list mb-30">
 					<h4>Email Address</h4>
 					<p>
-						<a
-							href="../../cdn-cgi/l/email-protection.html"
-							class="__cf_email__"
-							data-cfemail="422b2c242d02273a232f322e276c212d2f"
-							>email</a
+						<a href="mailto:hello@mydynamocloud.com" class="__cf_email__"
+							>hello@mydynamocloud.com</a
 						>
 					</p>
 				</div>
 			</div>
 
 			<div class="social-icon-right mt-20">
-				<a href="#">
-					<i class="fab fa-facebook-f"></i>
-				</a>
+				<a href="#"> </a>
 			</div>
 		</div>
-
 		<main>
 			<!-- breadcrumb-area-start -->
 
@@ -524,7 +514,10 @@
 
 		<!-- footer start -->
 		<footer>
-			<section class="footer-area pb-90 bg-footer" data-background="img/bg/">
+			<section
+				class="footer-area pb-90 bg-footer"
+				data-background="img/bg/footer-bg.jpg"
+			>
 				<div class="container">
 					<div
 						class="row d-flex justify-content-start justify-content-md-between align-items-center"
@@ -535,36 +528,37 @@
 							<div class="footer-bottom-area">
 								<div class="widgets">
 									<div class="footer-logo">
-										<!-- <img src="img/logo/logo.png" alt="" /> -->
-										Dynamo Cloud
+										<img
+											src="img/logo/logo.png"
+											alt="logo"
+											style="width: 8rem"
+										/>
 									</div>
 									<p>Top-tier web hosting solutions for your website</p>
 									<ul class="adress">
 										<li>
 											<i class="fa fa-map-marker-alt"></i>
-											<span> Lagos, NG</span>
+											<span>
+												5/7 Lekki Beach Road, by 3rd Roundabout, Lekki,
+												Lagos, Nigeria</span
+											>
 										</li>
 										<li>
 											<i class="fa fa-envelope"></i>
 											<span
 												><a
-													href="../../cdn-cgi/l/email-protection.html"
+													href="mailto:hello@mydynamocloud.com"
 													class="__cf_email__"
-													data-cfemail="d1b8bfb7be91b4a9b0bca1bdb4a6b4b3ffb2bebc"
-													>email</a
-												></span
-											>
+													>hello@mydynamocloud.com</a
+												>
+											</span>
 										</li>
-										<li><i class="fa fa-phone"></i> <span>234 00000</span></li>
-										<li>
-											<i class="fa fa-globe"> </i>
-											<!-- <span>www.webexample.com</span> -->
-										</li>
+										<!-- <li><i class="fa fa-phone"></i> <span>234 00000</span></li> -->
 									</ul>
 								</div>
 							</div>
 							<div class="footer-social text-center">
-								<a href="#"><i class="fab fa-facebook"></i></a>
+								<!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
 								<!-- <a href="#"><i class="fab fa-twitter"></i></a>
 								<a href="#"><i class="fab fa-behance"></i></a>
 								<a href="#"><i class="fab fa-linkedin"></i></a>
@@ -594,7 +588,11 @@
 											</div>
 											<div class="wegets-body">
 												<ul>
-													<li><a href="#">Email</a></li>
+													<li>
+														<a href="mailto:hello@mydynamocloud.com"
+															>hello@mydynamocloud.com</a
+														>
+													</li>
 													<!-- <li><a href="#">hosting</a></li>
 													<li><a href="#">WordPress</a></li>
 													<li><a href="#">VPS</a></li>
@@ -636,8 +634,6 @@
 				</div>
 			</section>
 		</footer>
-		<!-- footer end -->
-
 		<!-- footer end -->
 
 		<!-- JS here -->
