--- a/get-started.html
+++ b/get-started.html
@@ -147,7 +147,12 @@
 			<!-- breadcrumb-area-end -->
 
 			<!-- login Area Strat-->
-
+			<div class="alert">
+				<div class="inner">
+					<h3>Note</h3>
+					<p>An email has been sent, We will get back to you shortly</p>
+				</div>
+			</div>
 			<div class="login-area pt-120 pb-120">
 				<div class="container">
 					<div class="row">
@@ -168,7 +173,9 @@
 
 									<div class="login-action mb-20 fix"></div>
 
-									<button class="btn btn-2 btn-black w-100">Submit</button>
+									<button class="btn btn-2 btn-black w-100 sub-started">
+										Submit
+									</button>
 								</form>
 							</div>
 						</div>
