--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
 											class="slider-btn wow fadeInUp animated"
 											data-wow-delay="0.9s"
 										>
-											<a href="./get-started.html" class="btn">Get Started</a>
+											<!-- <a href="./get-started.html" class="btn">Get Started</a>
 											<a href="./about.html" class="btn btn-border"
 												>Learn More</a
-											>
+											> -->
 										</div>
 									</div>
 								</div>
@@ -398,10 +398,7 @@
 					<div class="row">
 						<div class="col-12">
 							<div class="pricing-more-link text-center mt-50">
-								<p>
-									For subscriptions please
-									<a href="./get-started.html">click here</a>
-								</p>
+								<p><a href="./get-started.html">Subscribe</a> for a plan</p>
 							</div>
 						</div>
 					</div>
@@ -705,7 +702,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-xl-4 col-lg-4 col-md-4">
+									<!-- <div class="col-xl-4 col-lg-4 col-md-4">
 										<div class="wigets mb-30">
 											<div class="widgets-titles">
 												<h4 style="color: black">Our Company</h4>
@@ -713,15 +710,11 @@
 											<div class="wegets-body">
 												<ul>
 													<li><a href="./about.html">About</a></li>
-													<!-- <li><a href="#">Tickets</a></li>
-													<li><a href="#">Knowledge</a></li>
-													<li><a href="#">base</a></li>
-													<li><a href="#">System</a></li>
-													<li><a href="#">Marketing</a></li> -->
+											
 												</ul>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 							<div class="row">
