--- a/get-started.html
+++ b/get-started.html
@@ -152,11 +152,8 @@
 				<div class="container">
 					<div class="alert">
 						<div class="inner">
-							<h3>Warning</h3>
-							<p>
-								Its like a box with a warning inside that say, "no payment
-								method available at the moment
-							</p>
+							<h3>Order request received</h3>
+							<p>Invoice will be sent as soon as payment method is available</p>
 						</div>
 					</div>
 					<div class="row">
